# ProjetJeuVideo5A

./: CMakeLists.txt  Makefile  README.md
data/: basicImage.pcx
project/: CMakeLists.txt  Doxyfile  Makefile~
project/data/: pain.pcx
project/src/: ID_list.h  characters.cpp  characters.h  enemy.cpp  enemy.h  events.cpp  events.h  game_states.h  gui_ids.h  main.cpp  menu.cpp  menu.h  path.cpp  path.h  player.cpp  player.h  scene.cpp  scene.h  scenedebug.cpp  scenedebug.h  screenManager.cpp  screenManager.h
src/: ID_list.h  characters.cpp  characters.h  enemy.cpp  enemy.h  events.cpp  events.h  game_states.h  main.cpp  menu.cpp  menu.h  path.cpp  player.cpp  player.h  scene.cpp  scene.h  scenedebug.cpp
